<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_700">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.BcePlaceCom.Fullscreen"
        android:fitsSystemWindows="true"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_margin="7sp"
        tools:context=".SplashActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/red_700"
            android:layout_weight="1">
            <ImageView
                android:layout_width="190sp"
                android:layout_height="match_parent"
                android:src="@drawable/splash_screen_logo"
                android:contentDescription="@string/splash_bce_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_college_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/red_800"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_app_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>